--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -1,2 +1,12 @@
 @import "../common/slider/slider.wxss";
 @import "../common/footer/footer.wxss";
+@import "../common/classify-item/classify-item.wxss";
+
+.com-title {
+  width: 100%;
+  text-align: center;
+  box-sizing: border-box;
+  display: block;
+  height: 56px;
+  line-height: 56px;
+}
