--- a/pages/common/money-best/money-best.wxml
+++ b/pages/common/money-best/money-best.wxml
@@ -1,11 +1,12 @@
 <template name="best">
   <section class="best-content">
-    <dl class="item" wx:for="{{items}}" wx:key="index">
-      <dt>{{ item.title }}
+    <div class="item" wx:for="{{items}}" wx:key="index">
+      <p class="title">
+        <span>{{ item.title }}</span>
         <span>{{ item.sub }}</span>
-      </dt>
-      <dd>{{ item.rate }}</dd>
-      <dd>{{ item.text }}</dd>
-    </dl>
+      </p>
+      <p class="value">{{ item.rate }}</p>
+      <p class="desc">{{ item.text }}</p>
+    </div>
   </section>
 </template>
