--- a/pages/common/money-best/money-best.wxss
+++ b/pages/common/money-best/money-best.wxss
@@ -4,53 +4,63 @@
   flex-wrap: wrap;
   justify-content: space-around;
   box-sizing: border-box;
-}
-
-.best-content:after {
-  content: " ";
-  display: block;
-  width: 100%;
-  height: 0px;
-  box-sizing: border-box;
-  border-bottom: 1px solid #ddd;
-  position: relative;
-  top: -104px;
+  background-color: #fff;
 }
 
 .best-content .item {
   position: relative;
   width: 50%;
   box-sizing: border-box;
+  padding-left: 16px;
+  height: 109px;
 }
 
-.best-content .item:after {
-  content: " ";
-  width: 1px;
-  height: 68px;
-  display: block;
+.best-content .item:nth-child(1):before, .best-content .item:nth-child(2):before {
+  content: '';
   position: absolute;
-  top: 50%;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  display: block;
+  background: #eee;
+  transform: scaleY(0.5);
+  -webkit-transform-origin: 0 0;
+  transform-origin: 0 0;
+}
+
+.best-content .item:nth-child(odd):after {
+  content: '';
+  position: absolute;
   right: 0;
-  margin-top: -34px;
-  border-right: 1px solid #eee;
+  width: 1px;
+  display: block;
+  background: #eee;
+  -webkit-transform: scaleX(0.5);
+  -ms-transform: scaleX(0.5);
+  transform: scaleX(0.5);
+  -webkit-transform-origin: 0 0;
+  transform-origin: 0 0;
+  height: 68px;
+  top: 20px;
 }
 
-dt {
-  font-size: 15px;
-  line-height: 21px;
+.best-content .item p {
+  display: block;
+}
+
+.best-content .item p.title {
   color: #333;
+  height: 21px;
+  line-height: 21px;
+  box-sizing: border-box;
+  margin: 17px 0 8px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
-dt span {
-  font-size: 11px;
-  color: #ff5155;
-  border: 1px solid #ff5155;
-  padding: 0 4px;
-  vertical-align: 1px;
-  margin-left: 2px;
-}
-
-dd:nth-child(2) {
+.best-content .item p.value {
   font-weight: 700;
   font-size: 22px;
   height: 29px;
@@ -61,7 +71,7 @@ dd:nth-child(2) {
   overflow: hidden;
 }
 
-dd:nth-child(3) {
+.best-content .item p.desc {
   font-size: 12px;
   height: 17px;
   line-height: 17px;
