--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -4,10 +4,12 @@
 @import "../common/money-best/money-best.wxss";
 
 .com-title {
+  margin-top: 10px;
   width: 100%;
   text-align: center;
   box-sizing: border-box;
   display: block;
   height: 56px;
   line-height: 56px;
+  background-color: #fff;
 }
