--- a/pages/common/slider/slider.wxml
+++ b/pages/common/slider/slider.wxml
@@ -1,5 +1,5 @@
 <template name="slider">
-  <swiper class="slider-con" indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}" circular="{{circular}}">
+  <swiper class="slider-con" indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}" circular="{{circular}}" display-multiple-items="displaymultipleitems">
     <block wx:for="{{imgUrls}}" wx:key="index" >
       <swiper-item>
         <image src="{{item}}" class="slide-image" />
